# greengrass-v2-sagemaker-edge-manager-python

./: README.md
components/artifacts/aws.sagemaker.edgeManager/0.1.0/: ATTRIBUTIONS.txt  LICENSE.txt  RELEASE_NOTES.md  agent.env  install.sh  sagemaker_edge_agent.service  sagemaker_edge_config.json  sha256_hex.shasum
components/artifacts/aws.sagemaker.edgeManager/0.1.0/docs/: INSTALL.md
components/artifacts/aws.sagemaker.edgeManager/0.1.0/docs/api/: agent.proto
components/artifacts/aws.sagemaker.edgeManager/0.1.0/docs/examples/agent_python_example/: CMakeLists.txt  sagemaker_edge_agent_client.cc  sagemaker_edge_agent_example.cc
components/artifacts/aws.sagemaker.edgeManager/0.1.0/docs/examples/examples/agent_cpp_example/: README.md  sagemaker_edge_agent_client.hh  shm.cc  shm.hh
components/artifacts/aws.sagemaker.edgeManagerPythonClient/0.1.0/: edge_manager_python_client.py
components/artifacts/aws.sagemaker.edgeManagerPythonClient/0.1.11/: edge_manager_python_client.py
components/artifacts/aws.sagemaker.edgeManagerPythonClient/0.1.12/: edge_manager_python_client.py
components/artifacts/aws.sagemaker.edgeManagerPythonClient/0.1.15/: edge_manager_python_client.py
components/artifacts/aws.sagemaker.edgeManagerPythonClient/0.1.2/: edge_manager_python_client.py
components/artifacts/aws.sagemaker.edgeManagerPythonClient/0.1.5/: edge_manager_python_client.py
components/artifacts/aws.sagemaker.edgeManagerPythonClient/0.1.7/: edge_manager_python_client.py
components/artifacts/aws.sagemaker.edgeManagerPythonClient/0.1.8/: edge_manager_python_client.py
components/artifacts/aws.sagemaker.edgeManagerPythonClient/0.1.9/: edge_manager_python_client.py
components/recipes/: aws.sagemaker.edgeManager-0.1.0.yaml  aws.sagemaker.edgeManagerPythonClient-0.1.0.yaml  com.model.image.classifier-0.1.0.yaml
model-training/: Image-classification-fulltraining-highlevel.ipynb
